fix: prevent modal scroll on small screens by enforcing fixed height - Updated  styles to use  and  on screens 500px or less - Clicking the email icon now launches a modal form with inputs for name, email, and message. - Included a close button on the modal to exit the form manually. - Completely removed the old Contact Me section from the layout.

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -520,6 +520,64 @@ textarea:focus {
   transform: translateY(-3px);
 }
 
+/* Modal  */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background: var(--dark);
+  color: var(--white);
+  padding: 2rem;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;
+  max-height: 80vh;
+  overflow-y: auto;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+
+  transform: translateY(-100px);
+  opacity: 0;
+}
+
+.modal-overlay.open .modal-content {
+  transform: translateY(0);
+  opacity: 1;
+  animation: slideDown 0.3s ease-out forwards;
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.modal-close {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.75rem;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
 /* Project and send buttons */
 .live,
 .github,
@@ -688,15 +746,22 @@ body.light {
   border-bottom: 1px solid black;
 }
 
-.resume__img {
-  max-width: 100%;
-  max-height: 100%;
-  image-rendering: -webkit-optimize-contrast;
-  image-rendering: high-quality;
+.modal-content.modal-content-light {
+  background: var(--white);
+  color: var(--dark);
 }
 
-.resume__img.light {
-  box-shadow: 0 0 30px 2px rgba(68, 68, 68, 0.5);
+.modal-content.modal-content-dark {
+  background: var(--dark);
+  color: var(--white);
+}
+
+.modal-close.modal-close-light {
+  color: var(--dark);
+}
+
+.modal-close.modal-close-dark {
+  color: var(--white);
 }
 
 .contact__input--light {
@@ -747,6 +812,11 @@ body.dark textarea {
 
   .landing {
     padding: 0;
+  }
+
+  .modal-content {
+    height: 80vh;
+    overflow-y: hidden;
   }
 
   p {
